@@ -19,45 +19,54 @@ import java.time.LocalDateTime
  *    limitations under the License.
  */
 buildscript {
+    configurations.configureEach {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
     }
 }
 
-wrapper{
-    gradleVersion = '5.5.1'
+wrapper {
+    gradleVersion = '9.4.1'
 }
-
-apply from: "build-${profile}.gradle"
+def resolve(String name) {
+    return (findProperty(name) ?: System.getenv(name))
+}
+apply from: "build-${resolve('profile')}.gradle"
 apply plugin: 'idea'
 apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'groovy'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
 
-configurations.all {
+configurations.configureEach {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.sourceCompatibility = JavaVersion.VERSION_1_8
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.targetCompatibility = JavaVersion.VERSION_1_8
+    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.release = 8
+}
+[compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.encoding = 'UTF-8'
 
 group = ext.mainGroup
 version = ext.mainVersion + (ext.snapshot ? '-SNAPSHOT' : '')
 
 repositories {
-    jcenter()
+    mavenCentral()
     maven {
-        url "${artifactory_contextUrl}/libs-${project.ext.snapshot ? 'all-local' : 'release'}"
+        url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
         credentials {
-            username = 'public-reader'
-            password = 'public-reader'
+            username "${resolve('repos_user')}"
+            password "${resolve('repos_password')}"
         }
     }
     mavenLocal()
@@ -108,44 +117,39 @@ javadoc {
     failOnError = false
     options.encoding = 'utf-8'
 }
-tasks.create(name: 'javadocJar', type: Jar, dependsOn: 'javadoc') {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-tasks.create(name: 'sourceJar', type: Jar) {
-    from sourceSets.main.allJava
-}
-
-artifacts {
-    archives javadocJar
-    archives sourceJar
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
 
 publishing {
+    repositories {
+        maven {
+            url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
+            credentials {
+                username = resolve("repos_user")
+                password = resolve("repos_password")
+            }
+        }
+    }
     publications {
         mavenJava(MavenPublication) {
             from components.java
-
-            artifact javadocJar {
-                classifier 'javadoc'
-            }
-            artifact sourceJar {
-                classifier 'sources'
-            }
         }
     }
 }
 dependencies {
-    compile "com.es.lib:common-lib:1.3.0${project.ext.snapshot ? '-SNAPSHOT' : ''}"
-    compile "javax.validation:validation-api:1.1.0.Final"
+    api "com.es.lib:common-lib:1.3.0${project.ext.snapshot ? '-SNAPSHOT' : ''}"
+    api "javax.validation:validation-api:1.1.0.Final"
 
-    testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
-    testCompile "cglib:cglib:3.2.12"
-    testCompile "org.objenesis:objenesis:3.0.1"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+    testImplementation "org.spockframework:spock-core:2.3-groovy-4.0"
 }
 
 test {
+    useJUnitPlatform()
     finalizedBy jacocoTestReport
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 def sonarAvailable = properties['sonar_url'] != null && properties['sonar_user'] != null && properties['sonar_password'] != null
